# trad

./: .env.example  .gitignore  CONVENTIONS.md  DECISIONS.md  Messaggitg.txt  NOZIONI AGGIUNTIVE.txt  PARTNER_AI_INTEGRATION_GUIDE.md  PROJECT.md  README.md  ROADMAP.md  TRADING_PRINCIPLES.md  Top_Picks sp500 30-12-25.ods  WEEKEND_CHECKLIST.md  algoritmo selezione azioni .ipynb  conftest.py  pyproject.toml
.claude/: settings.local.json
agents/: README.md  quant_reviewer.md  stock_selector.md
analysis/: export_dataset.py  mentor_entries.py  mentor_entries_report.txt  mentor_momentum.py  mentor_momentum_report.txt  probe_mt5.py
backtesters/: README.md  base.py
brokers/: README.md  base.py  binance.py  coinbase.py  ibkr.py  mt5.py  yfinance_data.py
config/: README.md  markets.yaml  risk.yaml
core/: __init__.py  quant_metrics.py  regime.py  registry.py  risk_gate.py  runner.py
data/: README.md  news_calendar.csv  regime_timeline_gbpusd.csv
docs/: ARCHITECTURE_v2.md  INVESTING_PILLAR_PLAN.md  INVESTMENT_ALGO_DESIGN.md  OPERATIONAL_GUIDE.md  PYTHON_FILES_MAP.md  QUANT_REVIEW_PROTOCOL.md  README.md  STAGE2_TESTING_PLAN.md  TRADING_WORKFLOW_DESIGN.md
fondamenti_tecnici/: README.md  _INTAKE.md
journals/: LEGENDA.md  NOTION_JOURNAL_SCHEMA.md  NOTION_SETUP_GUIDE.md  README.md
level_analyzer/: __init__.py  __main__.py  config.yaml  detector.py  feed.py  gate.py  notify.py  reconcile.py  record.py
mql5/: README.md  london_breakout.ex5  london_breakout.mq5  tsmom_jpy.ex5  tsmom_jpy.mq5
notifiers/: README.md  _pip_table.py  base.py  telegram.py
output/: README.md
signal_copier/: README.md  __init__.py  __main__.py  config.yaml  executor.py  journal.py  models.py  planner.py  reader.py
skills/: README.md
stoxs picks/: Analisi_Completa sp500 30-12-25.ods  Analisi_Completa stocks10-05-26.ods
strategies/: README.md  _base.py
(+156 files in other folders)
