[tool.poetry]
name = "trading-system"
version = "0.1.0"
description = "Piattaforma modulare per scouting auto/semiautomatico di strategie di trading"
authors = ["Matteo <matteoteo2507@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Dati di mercato
yfinance = "^0.2.40"
pandas = "^2.2.0"
numpy = "^1.26.0"
scipy = "^1.13.0"
pandas-ta = "^0.3.14b"

# Output Excel (usato dal notebook V6.0)
xlsxwriter = "^3.2.0"
openpyxl = "^3.1.0"

# Configurazione
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
pydantic = "^2.7.0"

# CLI / logging
typer = "^0.12.0"
rich = "^13.7.0"

# Broker — IBKR
ib-insync = "^0.9.86"

# Broker — MT5 (libreria ufficiale MetaQuotes, solo Windows)
MetaTrader5 = { version = "^5.0.45", markers = "sys_platform == 'win32'" }

# Broker — Crypto (ccxt copre Coinbase, Binance, +100 exchange)
ccxt = "^4.3.0"

# Notifier — Telegram (outbound, Bot API)
python-telegram-bot = "^21.0"

# Signal copier — lettura canali Telegram via account utente (MTProto)
telethon = "^1.36.0"

# Stage 4 — Consensus layer (LLM)
langchain = "^0.3.0"
langchain-anthropic = "^0.3.0"
langchain-openai = "^0.3.0"
langgraph = "^0.2.0"

# Stage 3 — Backtester pluralistico
vectorbt = "^0.26.0"
backtrader = "^1.9.78"

# Test
pytest = "^8.0.0"
pytest-cov = "^5.0.0"

# Code quality
black = "^24.0.0"
ruff = "^0.5.0"
mypy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
